--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,9 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <style>
-    body{
-      height: 100vh
+    html, 
+    body {
+        height: 100%;
     }
   </style>
   <body >
