feat index.html: meta description

--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="fr">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <meta
+      name="description"
+      content="ANDRIAMIARANTSOA Nomentsafidy. Développeur javascript fullstack et Génie logiciel. Du site vitrine au projet plus complexe, je vous propose une expertise
+    et un développement qui correspond à vos attentes & à vos besoins."
+    />
+    <meta
+      name="keywords"
+      content="ANDRIAMIARANTSOA Nomentsafidy, Developpeur freelance, Développeur javascript fullstack, portofolio ANDRIAMIARANTSOA Nomentsafidy, ANDRIAMIARANTSOA, Nomentsafidy, "
+    />
   </head>
   <style>
     html,
