--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,6 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <title><%= htmlWebpackPlugin.options.title %></title>
     <meta
       name="description"
       content="ANDRIAMIARANTSOA Nomentsafidy. Développeur javascript fullstack et Génie logiciel. Du site vitrine au projet plus complexe, je vous propose une expertise
@@ -15,6 +13,12 @@
       name="keywords"
       content="ANDRIAMIARANTSOA Nomentsafidy, Developpeur freelance, Développeur javascript fullstack, portofolio ANDRIAMIARANTSOA Nomentsafidy, ANDRIAMIARANTSOA, Nomentsafidy, "
     />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <title>Nomentsafidy</title>
   </head>
   <style>
     html,
