fix sv.pdf not found

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       content="ANDRIAMIARANTSOA Nomentsafidy. Développeur javascript fullstack et Génie logiciel. Du site vitrine au projet plus complexe, je vous propose une expertise
     et un développement qui correspond à vos attentes & à vos besoins."
     />
+    <meta property="og:image" content="./portofolio.png" />
     <meta
       name="keywords"
       content="ANDRIAMIARANTSOA Nomentsafidy, Developpeur freelance, Développeur javascript fullstack, portofolio ANDRIAMIARANTSOA Nomentsafidy, ANDRIAMIARANTSOA, Nomentsafidy, "
